Fix upcoming events spacing 2

--- a/src/Pages/Stylesheets/UpcomingEvents.css
+++ b/src/Pages/Stylesheets/UpcomingEvents.css
@@ -148,4 +148,8 @@ h1 {
         flex-direction: column;
         justify-content: flex-start;
     }
+
+    .date {
+        position: static;
+    }
 }
